--- a/src/Chatbot.css
+++ b/src/Chatbot.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    background: url('D:\movie_project\movie-chatbot\public\background.jpg') no-repeat center center;
+    background: url('../public/background.jpg') no-repeat center center;
     background-size: cover;
     background-attachment: fixed;
     color: #fff;
